trybuild_tests/tests/trybuild/pass/newtype_string.rs
use butane::FieldType;

#[derive(FieldType)]
struct Name(String);

fn main() {}
