trybuild_tests/tests/trybuild/should-fail/butane_type_invalid_sqltype.rs
use butane::butane_type;

// This should fail - no SqlType value with this name
#[butane_type(NotARealType)]
pub type UserId = i32;

fn main() {}
